- Added Orange to the loot table of Emperor Cobra for the quest Some Make Lemonade, Some Make Liquor.
- Changed flags of Banana Bunch to allow every member of a group to loot it.
- Changed flags of Papaya to allow every member of a group to loot it.
- Changed flags of Orange to allow every member of a group to loot it.

- Changed the respawn time of Dusty Journal.

[2022-02-20]
- Changed the respawn time of Warped Crates.

[2022-02-21]
- Added Blackhoof Armaments to the loot table of Grimtotem Breaker for the quests Arms of the Grimtotems and More than Coincidence.
- Added Blackhoof Armaments to the loot table of Grimtotem Spirit-Shifter for the quests Arms of the Grimtotems and More than Coincidence.
- Added Blackhoof Armaments to the loot table of Grimtotem Elder for the quests Arms of the Grimtotems and More than Coincidence.
- Changed flags of Blackhoof Armaments to allow every member of a group to loot it.
- Changed flags of Grimtotem Note to allow every member of a group to loot it.

[2022-03-08]
- Added Gooey Ghoul Drool to the loot table of Decaying Ghoul for the quest You Can Run, But You Can't Hide and Silver Lining.
- Added Scourge Scrap Metal to the loot table of Vargul Deathwaker for the quest Making Something Out Of Nothing.
- Added Scourge Scrap Metal to the loot table of Vargul Runelord for the quest Making Something Out Of Nothing.
- Added Scourge Scrap Metal to the loot table of Vargul Slayer for the quest Making Something Out Of Nothing.
- Added Scourge Scrap Metal to the loot table of Vargul Blighthound for the quest Making Something Out Of Nothing.
- Added Basilisk Crystals to the loot table of Lurking Basilisk for the quest Gluttonous Lurkers.
- Changed flags of Gooey Ghoul Drool to allow every member of a group to loot it.
- Changed flags of Scourge Scrap Metal to allow every member of a group to loot it.
- Changed flags of Basilisk Crystals to allow every member of a group to loot it.

- Changed the respawn of Harvested Blight Crystal.